# Tenjin

.github/workflows/: ios.yml
App/: CMakeLists.txt
App/ios/: Info.plist
App/src/: main.cpp
Service/DatabaseManager/: CMakeLists.txt
Service/DatabaseManager/include/DatabaseManager/: DatabaseManager.h
Service/DatabaseManager/src/: DatabaseManager.cpp  DatabaseManager_Deck.cpp  DatabaseManager_ImportExport.cpp  DatabaseManager_Tag.cpp
Service/DeckService/include/DeckService/: DeckService.h
Service/DeckService/src/: DeckService.cpp
Service/WordService/include/WordService/: WordService.h
Service/WordService/src/: WordService.cpp
View/: AddWordDialog.qml  CMakeLists.txt  ContentBlock.qml  DeckDetailPanel.qml  FormulaBlock.qml  FormulaWebView.qml  GridContentView.qml  Main.qml  SearchBar.qml  SearchBox.qml  Sidebar.qml  WordPage.qml
View/ViewModels/include/ViewModels/: AppViewModel.h  DeckViewModel.h  WordViewModel.h
View/ViewModels/src/: DeckViewModel.cpp  WordViewModel.cpp
benchmarks/: CMakeLists.txt
benchmarks/Service/: CMakeLists.txt  DatabaseManagerBenchmark.cpp
tools/scripts/: build.py  runner.py  targets.py
